--- a/app/src/main/res/layout/fragment_sublogin2.xml
+++ b/app/src/main/res/layout/fragment_sublogin2.xml
@@ -57,7 +57,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="@+id/unit_weight"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="56dp"
             app:layout_constraintLeft_toLeftOf="@+id/nextbtn" />
 
         <EditText
@@ -101,8 +101,9 @@
             app:layout_constraintBottom_toTopOf="@+id/unit_weight"
             app:layout_constraintRight_toRightOf="@+id/unit_weight"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="12dp"
-            app:layout_constraintLeft_toLeftOf="@+id/unit_weight" />
+            android:layout_marginBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/unit_weight"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <Spinner
             android:layout_width="97dp"
@@ -113,9 +114,10 @@
             app:layout_constraintBottom_toTopOf="@+id/emailfield"
             android:layout_marginStart="16dp"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="6dp"
             app:layout_constraintTop_toTopOf="@+id/weightfield"
-            app:layout_constraintLeft_toRightOf="@+id/weightfield" />
+            app:layout_constraintLeft_toRightOf="@+id/weightfield"
+            app:layout_constraintVertical_bias="0.0"
+            android:layout_marginBottom="24dp" />
 
         <EditText
             android:layout_width="wrap_content"
@@ -143,8 +145,9 @@
             app:layout_constraintBottom_toTopOf="@+id/emailfield"
             app:layout_constraintRight_toRightOf="@+id/heightfield"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintLeft_toLeftOf="@+id/heightfield" />
+            android:layout_marginBottom="24dp"
+            app:layout_constraintLeft_toLeftOf="@+id/heightfield"
+            app:layout_constraintHorizontal_bias="1.0" />
 
         <EditText
             android:layout_width="wrap_content"
