--- a/app/src/main/res/layout/fragment_sublogin3.xml
+++ b/app/src/main/res/layout/fragment_sublogin3.xml
@@ -14,7 +14,7 @@
             android:text="Finish"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
+            android:id="@+id/finishregBtn"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintBottom_creator="1"
             android:layout_marginStart="8dp"
@@ -30,12 +30,12 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/carbsfield"
             tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toTopOf="@+id/editText2"
+            app:layout_constraintBottom_toTopOf="@+id/proteinfield"
             tools:layout_constraintLeft_creator="1"
             android:layout_marginBottom="7dp"
-            app:layout_constraintLeft_toLeftOf="@+id/editText2"
+            app:layout_constraintLeft_toLeftOf="@+id/proteinfield"
             android:hint="00%" />
 
         <EditText
@@ -43,11 +43,11 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText4"
+            android:id="@+id/workoutfreq_field"
             android:hint="e.g. 2 = 2 times/week"
             app:layout_constraintTop_toBottomOf="@+id/textView8"
             android:layout_marginTop="8dp"
-            app:layout_constraintRight_toRightOf="@+id/editText3"
+            app:layout_constraintRight_toRightOf="@+id/fatfield"
             android:layout_marginEnd="64dp" />
 
         <TextView
@@ -68,11 +68,11 @@
             android:id="@+id/textView7"
             android:textAlignment="textEnd"
             android:layout_width="0dp"
-            app:layout_constraintRight_toLeftOf="@+id/editText3"
+            app:layout_constraintRight_toLeftOf="@+id/fatfield"
             tools:layout_constraintRight_creator="1"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="11dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/editText3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/fatfield"
             tools:layout_constraintBaseline_creator="1"
             tools:layout_constraintLeft_creator="1"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -82,25 +82,25 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText3"
+            android:id="@+id/fatfield"
             android:hint="00%"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintBottom_creator="1"
             app:layout_constraintBottom_toTopOf="@+id/textView8"
-            app:layout_constraintRight_toRightOf="@+id/editText2"
+            app:layout_constraintRight_toRightOf="@+id/proteinfield"
             tools:layout_constraintLeft_creator="1"
             android:layout_marginBottom="20dp"
-            app:layout_constraintLeft_toLeftOf="@+id/editText2" />
+            app:layout_constraintLeft_toLeftOf="@+id/proteinfield" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/proteinfield"
             android:hint="00%"
             tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toTopOf="@+id/editText3"
+            app:layout_constraintBottom_toTopOf="@+id/fatfield"
             android:layout_marginStart="7dp"
             tools:layout_constraintLeft_creator="1"
             android:layout_marginBottom="8dp"
@@ -113,7 +113,7 @@
             android:textAlignment="textEnd"
             android:layout_width="0dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
+            app:layout_constraintBaseline_toBaselineOf="@+id/proteinfield"
             tools:layout_constraintBaseline_creator="1"
             tools:layout_constraintLeft_creator="1"
             app:layout_constraintLeft_toLeftOf="parent" />
@@ -130,7 +130,7 @@
             app:layout_constraintLeft_toLeftOf="@+id/textView6"
             app:layout_constraintHorizontal_bias="0.0"
             tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toBottomOf="@+id/editText"
+            app:layout_constraintBottom_toBottomOf="@+id/carbsfield"
             android:layout_marginBottom="11dp" />
 
         <Spinner
@@ -154,6 +154,7 @@
         android:text="@string/frag3text"
         android:textSize="30sp"
         android:textStyle="normal|bold"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:id="@+id/title_login3" />
 
 </FrameLayout>
