--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/LabelServing">
+        android:id="@+id/LinearLayout">
 
         <TextView
             android:layout_width="fill_parent"
