--- a/app/src/main/res/layout/fragment_sublogin2.xml
+++ b/app/src/main/res/layout/fragment_sublogin2.xml
@@ -6,6 +6,24 @@
     tools:context="com.example.kareem.macrotracker.Activities.Profilefrag">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="@string/frag2text"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="normal|bold"
+        android:id="@+id/title_login2"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_height="40dp"
+        android:layout_weight="1" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,55 +33,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:text="@string/frag2text"
-                android:textAlignment="center"
-                android:textSize="30sp"
-                android:textStyle="normal|bold"
-                android:id="@+id/title_login2"
-                tools:layout_constraintTop_creator="1"
-                tools:layout_constraintRight_creator="1"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="7dp"
-                tools:layout_constraintLeft_creator="1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <Button
                 android:text="Next"
-                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/nextbtn"
                 android:textAlignment="center"
-                tools:layout_constraintTop_creator="1"
                 tools:layout_constraintRight_creator="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="parent"
                 tools:layout_constraintLeft_creator="1"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="@+id/emailfield" />
+                android:layout_width="0dp"
+                app:layout_constraintVertical_bias="0.44"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/emailfield"
+                app:layout_constraintHorizontal_bias="0.37" />
 
             <EditText
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="43dp"
                 android:inputType="textEmailAddress"
                 android:ems="10"
                 android:id="@+id/emailfield"
                 android:hint="Email"
-                tools:layout_constraintRight_creator="1"
-                tools:layout_constraintBottom_creator="1"
-                android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="8dp"
+                app:layout_constraintLeft_toLeftOf="@+id/weightfield"
                 app:layout_constraintRight_toRightOf="@+id/unit_weight"
-                tools:layout_constraintLeft_creator="1"
-                android:layout_marginBottom="56dp"
-                app:layout_constraintLeft_toLeftOf="@+id/nextbtn" />
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="400dp"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -77,7 +75,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/dobfield"
                 app:layout_constraintRight_toRightOf="@+id/dobfield"
                 tools:layout_constraintLeft_creator="1"
-                android:layout_marginBottom="112dp"
+                android:layout_marginBottom="96dp"
                 app:layout_constraintLeft_toLeftOf="@+id/dobfield"
                 app:layout_constraintHorizontal_bias="0.0" />
 
@@ -95,7 +93,8 @@
                 tools:layout_constraintLeft_creator="1"
                 android:layout_marginBottom="4dp"
                 app:layout_constraintLeft_toLeftOf="@+id/lnamefield"
-                app:layout_constraintTop_toBottomOf="@+id/title_login2" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.65999997" />
 
             <Spinner
                 android:id="@+id/unit_height"
@@ -166,8 +165,9 @@
                 app:layout_constraintBottom_toTopOf="@+id/heightfield"
                 app:layout_constraintRight_toRightOf="@+id/heightfield"
                 tools:layout_constraintLeft_creator="1"
-                android:layout_marginBottom="6dp"
-                app:layout_constraintLeft_toLeftOf="@+id/heightfield" />
+                android:layout_marginBottom="8dp"
+                app:layout_constraintLeft_toLeftOf="@+id/heightfield"
+                app:layout_constraintHorizontal_bias="0.13" />
 
             <RadioGroup
                 android:layout_height="20dp"
@@ -196,7 +196,17 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/radioButton"
                     android:layout_weight="1" />
+
             </RadioGroup>
+
+            <android.support.constraint.Guideline
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/guideline"
+                app:layout_constraintGuide_begin="15dp"
+                android:orientation="vertical"
+                tools:layout_editor_absoluteY="0dp"
+                tools:layout_editor_absoluteX="15dp" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
