--- a/app/src/main/res/layout/fragment_sublogin1.xml
+++ b/app/src/main/res/layout/fragment_sublogin1.xml
@@ -14,6 +14,21 @@
             android:layout_width="match_parent"
             android:layout_height="520dp">
 
+            <Button
+                android:text="SKIP (DEV MODE)"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/skipbtn"
+                app:layout_constraintBottom_toTopOf="@+id/loginbtn"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/passfield"
+                app:layout_constraintVertical_bias="0.7"
+                app:layout_constraintRight_toRightOf="@+id/loginbtn"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintLeft_toLeftOf="@+id/loginbtn"
+                android:layout_marginStart="32dp" />
+
             <TextView
                 android:layout_width="368dp"
                 android:layout_height="wrap_content"
@@ -23,7 +38,7 @@
                 android:textAlignment="center"
                 android:typeface="sans"
                 android:id="@+id/title_login1"
-                tools:layout_editor_absoluteY="8dp"
+                tools:layout_editor_absoluteY="89dp"
                 tools:layout_editor_absoluteX="8dp" />
 
             <Button
