--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.kareem.macrotracker.HomeActivity">
+    <item android:title="Logout"
+        android:id="@+id/logout_menu_btn" />
     <item
         android:id="@+id/action_MacroSettings"
         android:orderInCategory="100"
