--- a/app/src/main/res/layout/fragment_sublogin2.xml
+++ b/app/src/main/res/layout/fragment_sublogin2.xml
@@ -34,21 +34,31 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:text="Cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/cancelBtn"
+                app:layout_constraintBottom_toBottomOf="@+id/nextbtn"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/emailfield"
+                app:layout_constraintLeft_toLeftOf="@+id/emailfield"
+                app:layout_constraintRight_toLeftOf="@+id/nextbtn"
+                android:layout_marginEnd="8dp" />
+
+            <Button
                 android:text="Next"
                 android:layout_height="wrap_content"
                 android:id="@+id/nextbtn"
                 android:textAlignment="center"
-                tools:layout_constraintRight_creator="1"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintRight_toRightOf="@+id/emailfield"
                 tools:layout_constraintLeft_creator="1"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_width="0dp"
+                android:layout_width="235dp"
                 app:layout_constraintVertical_bias="0.44"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/emailfield"
-                app:layout_constraintHorizontal_bias="0.37" />
+                app:layout_constraintHorizontal_bias="1.0" />
 
             <EditText
                 android:layout_width="0dp"
