--- a/app/src/main/res/layout/fragment_sublogin1.xml
+++ b/app/src/main/res/layout/fragment_sublogin1.xml
@@ -19,15 +19,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/skipbtn"
+                app:layout_constraintLeft_toLeftOf="@+id/loginbtn"
                 app:layout_constraintBottom_toTopOf="@+id/loginbtn"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/passfield"
-                app:layout_constraintVertical_bias="0.7"
-                app:layout_constraintRight_toRightOf="@+id/loginbtn"
-                android:layout_marginEnd="32dp"
-                app:layout_constraintLeft_toLeftOf="@+id/loginbtn"
-                android:layout_marginStart="32dp" />
+                app:layout_constraintRight_toRightOf="@+id/loginbtn" />
 
             <TextView
                 android:layout_width="368dp"
@@ -53,7 +48,8 @@
                 tools:layout_constraintLeft_creator="1"
                 app:layout_constraintLeft_toLeftOf="@+id/loginbtn"
                 android:visibility="invisible"
-                android:enabled="false" />
+                android:enabled="false"
+                app:layout_constraintHorizontal_bias="1.0" />
 
             <EditText
                 android:layout_width="0dp"
@@ -63,44 +59,24 @@
                 android:id="@+id/usernamefield"
                 android:hint="username"
                 tools:layout_constraintRight_creator="1"
-                tools:layout_constraintBottom_creator="1"
-                app:layout_constraintBottom_toTopOf="@+id/passfield"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintRight_toRightOf="parent"
                 tools:layout_constraintLeft_creator="1"
-                android:layout_marginBottom="12dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
-
-            <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:id="@+id/passfield"
-                android:hint="password"
-                tools:layout_constraintRight_creator="1"
-                tools:layout_constraintBottom_creator="1"
-                app:layout_constraintBottom_toTopOf="@+id/loginbtn"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:layout_constraintLeft_creator="1"
-                android:layout_marginBottom="119dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHorizontal_bias="0.87"
+                app:layout_constraintBottom_toTopOf="@+id/skipbtn"
+                android:layout_marginBottom="56dp" />
 
             <Button
                 android:text="Login / Register"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/loginbtn"
-                tools:layout_constraintRight_creator="1"
                 tools:layout_constraintBottom_creator="1"
                 app:layout_constraintBottom_toTopOf="@+id/registerbtn"
-                app:layout_constraintRight_toRightOf="@+id/passfield"
-                tools:layout_constraintLeft_creator="1"
-                android:layout_marginBottom="5dp"
-                app:layout_constraintLeft_toLeftOf="@+id/passfield" />
+                tools:layout_editor_absoluteX="122dp"
+                android:layout_marginBottom="32dp" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
