--- a/app/src/main/res/layout/activity_saved_meal.xml
+++ b/app/src/main/res/layout/activity_saved_meal.xml
@@ -31,9 +31,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Portion:"
-                android:id="@+id/Text_Portion"
+                android:text="PortionDetails"
+                android:id="@+id/Text_PortionDetails"
                 android:textColor="#000000" />
+
+            <TextView
+                android:text="Calories:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/Text_Calories"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
