--- a/app/src/main/res/layout/item_saved_meal.xml
+++ b/app/src/main/res/layout/item_saved_meal.xml
@@ -17,22 +17,22 @@
             android:id="@+id/Text_MealName"
             android:textColor="@color/abc_primary_text_disable_only_material_light" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="portionType"
-            android:id="@+id/Text_PortionType"
+            android:text="portionDetails"
+            android:id="@+id/Text_PortionDetails"
             android:layout_alignParentRight="true"
-            android:textColor="#8b8b8b" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Weight"
-            android:id="@+id/Text_Weight" />
-
+            android:textColor="#8b8b8b"
+            android:layout_weight="1" />
     </LinearLayout>
 
     <LinearLayout
